<?xml version="1.0"?>
<package format="3">
  <name>imgui_vendor</name>
  <version>0.1.0</version>
  <description>Vendor package for Dear ImGui</description>
  <maintainer email="marcel.zeilinger@ait.ac.at">Marcel Zeilinger</maintainer>
  <license>Apache 2</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>libglfw3-dev</depend>
  <depend>libglew-dev</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
